fix: fixed an issue hiding the sidebar on mobile

--- a/apps/client/src/app/app.component.less
+++ b/apps/client/src/app/app.component.less
@@ -32,6 +32,12 @@
       font-size: 11px;
     }
   }
+
+  .sider {
+    .ant-layout-sider-children {
+      overflow: auto;
+    }
+  }
 }
 
 .menu-link, .menu-link:visited, .menu-link:focus {
@@ -59,12 +65,8 @@
   }
 }
 
-.sider {
-  overflow: auto;
-}
-
 .flex-container {
-  height: 100%;
+  min-height: 100%;
 }
 
 .social-buttons {
